--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
         " tsx": "never"
       }
     ],
+    "@typescript-eslint/no-non-null-assertion": "off",
     "prettier/prettier": ["error", { "endOfLine": "auto" }]
   }
 }
