--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "react-select": "^5.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -34,7 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
